...
    <string name="pack_editor_choose">Choose</string>
    <plurals name="pack_editor_setting_count"><item quantity="one">%1$d configurable setting</item><item quantity="other">%1$d configurable settings</item></plurals>
    <plurals name="pack_editor_selection_count"><item quantity="one">%1$d selected</item><item quantity="other">%1$d selected</item></plurals>
    <string name="pack_group_features">Features</string>
    <string name="pack_group_detection">Detection</string>
    <string name="pack_group_text_filter">Text filter</string>
    <string name="pack_group_appearance">Censor appearance</string>
    <string name="pack_group_border">Border</string>
    <string name="pack_group_phrases">Censor messages</string>
    <string name="pack_group_reverse">Reverse censor</string>
    <string name="pack_group_palettes">Effect colors</string>
    <string name="pack_group_allowances">Allowances</string>
    <string name="pack_group_tribute_rules">Tribute rules</string>
    <string name="pack_group_spending_caps">Spending caps</string>
...
